# oa-assist

./: .gitignore  README.md  pyproject.toml
src/oa_assist/: __main__.py  assistant.py  assistant_cli.py  chat.py  cli.py  config.py  main.py  thread.py  thread_cli.py  tool_functions.py  tools.py  tooltest.py  tooltest_example.py  ui.py
src/oa_assist/_dep/: openai.py  rich.py
