[project]
name = "oa-assist"
version = "0.1.0"
description = "CLI interface for interacting with OpenAI assistants."
authors = [
    {name = "Dylan Evans", email = "dylan@dje.me"},
]
dependencies = [
    "openai>=1.6.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "blinker>=1.7.0"
]
requires-python = ">=3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
oaa = "oa_assist.main:main"
oa-assist = "oa_assist.main:main"

[tool.pdm]
package-type = "application"

